--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-mailchimp-subscribe": "^2.1.0"
+    "react-mailchimp-subscribe": "^2.1.0",
+    "to-querystring": "^1.1.0"
   },
   "devDependencies": {
     "husky": "^2.4.1",
